--- a/plugin.yml
+++ b/plugin.yml
@@ -4,4 +4,4 @@ version: 1.0.0
 api: 3.0.0
 load: POSTWORLD
 author: THXC
-description: Modifies TNT Blast(Self Explanatory Stuff Here).
+description: Modifies TNT Blast(It's Self Explanatory Stuff Here).
